Bug 420983 - Missing system tray icon if WireGuard connection made before applet startup
Summary: Missing system tray icon if WireGuard connection made before applet startup
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR minor
Target Milestone: 1.0
Assignee: Bruce Anderson
URL:
Keywords:
: 421303 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-05-04 06:02 UTC by Bruce Anderson
Modified: 2024-12-23 18:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bruce Anderson 2020-05-04 06:02:29 UTC
SUMMARY
No icon appears in the system tray if a configured WireGuard connection has started prior to start of the applet.

STEPS TO REPRODUCE
1. Configure a wired connection for autostart
2. Configure a WireGuard connection for autostart
3. Reboot system and login

OBSERVED RESULT
No network icon in the system tray

EXPECTED RESULT
The standard wired connection icon with the padlock addition should be in the system tray

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: linux 5.6.2
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION
Comment 1 Jan Grulich 2020-05-06 06:04:44 UTC
Git commit 040a5c8ce9b0ca6d0283e2b91a4790e03031f4ea by Jan Grulich, on behalf of Bruce Anderson.
Committed on 06/05/2020 at 06:04.
Pushed by grulich into branch 'master'.

Icon in system tray missing when WireGuard connection active on startup

Summary:
If a WireGuard connection is made prior to start of the
plasma-nm applet, no icon is displayed in the system tray.

Test Plan:
1. Setup a Wired connection to autostart
2. Setup a WireGuard connection which uses the Wired
   connection and set to autostart
3. Logout and login to start a new Plasma session
4. Verify that the standard Wired connection icon with a
   padlock symbol on it is shown in the system tray

Reviewers: jgrulich

Reviewed By: jgrulich

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29469

M  +3    -1    libs/declarative/connectionicon.cpp

https://commits.kde.org/plasma-nm/040a5c8ce9b0ca6d0283e2b91a4790e03031f4ea
Comment 2 Jan Grulich 2020-05-06 06:05:12 UTC
Git commit da52d01788f5f07aa60ed7a6f21d7943a2e0c8d3 by Jan Grulich, on behalf of Bruce Anderson.
Committed on 06/05/2020 at 06:05.
Pushed by grulich into branch 'Plasma/5.18'.

Icon in system tray missing when WireGuard connection active on startup

Summary:
If a WireGuard connection is made prior to start of the
plasma-nm applet, no icon is displayed in the system tray.

Test Plan:
1. Setup a Wired connection to autostart
2. Setup a WireGuard connection which uses the Wired
   connection and set to autostart
3. Logout and login to start a new Plasma session
4. Verify that the standard Wired connection icon with a
   padlock symbol on it is shown in the system tray

Reviewers: jgrulich

Reviewed By: jgrulich

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29469

M  +3    -1    libs/declarative/connectionicon.cpp

https://commits.kde.org/plasma-nm/da52d01788f5f07aa60ed7a6f21d7943a2e0c8d3
Comment 3 Bruce Anderson 2020-05-17 00:00:26 UTC
*** Bug 421303 has been marked as a duplicate of this bug. ***
Comment 4 Ben Cooksley 2024-12-23 18:23:47 UTC
Bulk transfer as requested in T17796