Icon in system tray missing when WireGuard connection active on startup

Summary:
If a WireGuard connection is made prior to start of the
plasma-nm applet, no icon is displayed in the system tray.

BUG: 420983

Test Plan:
1. Setup a Wired connection to autostart
2. Setup a WireGuard connection which uses the Wired
   connection and set to autostart
3. Logout and login to start a new Plasma session
4. Verify that the standard Wired connection icon with a
   padlock symbol on it is shown in the system tray

Reviewers: jgrulich

Reviewed By: jgrulich

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29469